grid alignment fixes

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -95,10 +95,10 @@ body {
 
 .projects-container{
     grid-area: 1 / 1 / 3 / 2;
-    /* display: grid;
-    grid-template-rows: 1fr 9fr; */
+    display: grid;
+    grid-template-rows: 1fr 9fr;
     /* gap: 10px; */
-    padding: 10px;
+    /* padding: 10px; */
 }
 
 .projects {
